Finished the dark mode and started the media queries for desktop. Next up is mobile then fixing form application

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,9 +1,12 @@
 
+
+
 body
 {
     background-color: rgb(195, 189, 189);
 
 }
+
 /* NAV Bar */
 header {
     background-color: rgb(174, 169, 167);
@@ -13,9 +16,14 @@ header {
     padding: 10px; 
 }
 
-header .logo img.brain {
+
+.brain-light {
     height: 50px; 
     width: auto; 
+}
+.brain-dark
+{
+    display:none;
 }
 
 
@@ -25,7 +33,10 @@ nav ul {
     padding: 0; 
     margin: 0; 
 }
-
+nav
+{
+    margin-left:1050px;
+}
 header nav ul li {
     margin-right: 20px; 
     /* padding-right:20px; */
@@ -56,6 +67,15 @@ header nav ul li a {
     animation: rotateReturn 0.6s ease-in-out forwards;
 }
 
+body.dark-mode .moon {
+    transform: rotate(180deg); /* Optional: Add rotation for animation */
+}
+.sun
+{
+    height: 50px;
+    cursor: pointer;
+}
+
 /* Introduction */
 .introduction
 {
@@ -66,6 +86,7 @@ header nav ul li a {
     
 
 }
+
 
 .introduction h1
 {
@@ -209,7 +230,7 @@ section button.project-button:hover
     grid-row:3 ; 
     grid-column: 10; 
     background-color:white;
-    border:2px solid black
+    border:2px solid black;
     
 }
 .colmar-img img {
@@ -266,6 +287,8 @@ section button.project-button:hover
     margin-left: 15px;
     font-size: 20px;
 }
+
+
 
 .email
 {
@@ -415,3 +438,274 @@ footer h7
 }
 
 /* DARK MODE */
+#theme-switch
+{
+    height:50px;
+    width:50px;
+    padding:0;
+    border-radius:50%;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    background-color: rgb(196, 187, 187);
+}
+#theme-switch svg:last-child
+{
+    display:none;
+}
+.dark-mode #theme-switch svg:first-child
+{
+    display:none;
+}
+.dark-mode #theme-switch svg:last-child
+{
+    display:block;
+}
+.dark-mode 
+{
+    background-color:black;
+    color: white; 
+}
+.dark-mode header
+{
+    background-color:#000000;
+    color:white;
+}
+.dark-mode header a
+{
+    background-color:#000000;
+    color:white;
+}
+
+body .dark-mode
+{
+    background-color:black;
+}
+
+.dark
+{
+    display:none;
+}
+.dark-mode .dark
+{
+    display:block;
+    margin-left:5px;
+}
+.dark-mode .light
+{
+    display:none;
+}
+
+.dark-mode footer h7
+{
+    color:white;
+}
+.dark-mode footer a
+{
+    color:white;
+}
+
+.dark-mode .brain-light
+{
+ 
+   display:none;
+}
+.dark-mode .brain-dark
+{
+    display:block;
+    height:50px;
+    width:50px;
+}
+
+.dark-mode .colmar-info h5
+{
+    color:black;
+}
+
+.dark-mode section button.project-button
+{
+    background-color:rgb(75, 92, 74);
+    color:white;
+    grid-column:4 / span 2;
+    grid-row: 3 / span 2;
+    font-size: 1.5rem;
+    border-radius:8px;
+    margin-top:60px;
+    margin-bottom:60px;
+    transition: background-color 0.5s ease; 
+    transition: color 0.5s ease;
+}
+.dark-mode section button.project-button:hover
+{
+    background-color: rgba(255, 255, 255, 0.839);
+    color:rgb(0, 0, 0);
+}
+
+
+/* Desktop Media Query */
+@media (min-width:1800px)
+{
+    body
+{
+    background-color:rgb(174, 169, 167)
+}
+nav
+{
+    margin-left:1500px;
+}
+/* About me */
+.about-me
+ {
+    display:grid;
+    grid-template-columns: repeat(13, 100px) 50px;
+    grid-template-rows: repeat(6, 100px);
+ }
+.about-me h1
+{
+    grid-column: 9 / span 4;
+    grid-row: 2 / span 3;
+}
+.about-me-info
+{
+    grid-column: 10 / span 4 ;
+    grid-row: 3/ span 3;
+    margin-left: 20px;
+}
+.about-me-img
+{
+
+   grid-column: 6 / span 4;
+   grid-row: 2 / span 3;
+}
+/* Projects */
+
+section.projects
+{
+    display:grid;
+    grid-template-columns: repeat(10, 100px);
+    grid-template-rows: repeat(7, 100px);
+}
+section.projects h1
+{
+    font-size:3rem;
+    grid-row: 1;
+    grid-column: 10 / span 2;
+}
+section button.project-button
+{
+    background-color:black;
+    color:white;
+    grid-column:6 / span 2;
+    grid-row: 3 / span 2;
+    font-size: 1.5rem;
+    border-radius:8px;
+    margin-top:60px;
+    margin-bottom:60px;
+    transition: background-color 0.5s ease; 
+    transition: color 0.5s ease;
+}
+section button.project-button:hover
+{
+    background-color: rgba(255, 255, 255, 0.1);
+    color:rgb(0, 0, 0);
+}
+.colmar
+{
+    grid-column:8 / span 50;
+    grid-row: 2 / span 4; ;
+    margin-left:10px;
+    
+    
+}
+.colmar-info {
+    grid-row: 3 ; /* This occupies row 2 */
+    grid-column: 11; /* This occupies columns 2 to 5 */
+    background-color:white;
+    font-size:1.75em;
+    border:2px solid black
+    
+}
+
+.colmar-img {
+    grid-row:3 ; 
+    grid-column: 10; 
+    background-color:white;
+    border:2px solid black;
+    
+}
+.colmar-img img {
+    width: 100%; /* Full width of the container */
+    height: 100%; /* Maintain aspect ratio */
+}
+/* Contact */
+ .contact
+{
+    padding-left:150px;
+}
+/* Footer */
+footer
+{
+    display:grid;
+    grid-template-columns: repeat(25, 100px) 1fr 1fr;
+    grid-template-rows: repeat(7,50px);
+}
+
+footer h1
+{
+    grid-row: 3;
+    grid-column:4 / span 2;
+    font-size:3em;
+}
+
+footer .description
+{
+    grid-row:4 / span 2;
+    grid-column: 4 / span 2;
+    font-size:18px;
+}
+
+footer h7
+{
+    grid-row:7;
+    grid-column:9 / span 3;
+    padding-top:30px;
+    
+}
+
+.linkedin
+{
+    grid-column:18;
+    grid-row: 1 / span 2;
+    width:50px;
+    height:50px;
+    cursor:pointer;
+    padding-left:100x;
+}
+.github
+{
+    grid-column:18;
+    grid-row:1 / span 2;
+    width:50px;
+    height:50px;
+    cursor:pointer;
+    margin-left:60px;
+}
+
+.nav-about
+{
+    grid-column:10;
+    grid-row:1;
+    height:25px;
+    width:75px;
+    
+}
+.nav-projects
+{
+    grid-column:11;
+    grid-row:1;
+    height:25px;
+    width:75px;
+    
+}
+
+}
